--- a/style.css
+++ b/style.css
@@ -91,3 +91,6 @@
 	#menu input:checked + label:before {content:"\00d7"}
 	#menu input:checked ~ ul {display:block}
 }
+.active {
+  background-color: #4CAF50;
+}
